# suap-bot

./: .gitignore  Procfile  README.md  config.py  helpers_config.py  pyproject.toml  requirements.txt  run.sh  supervisord-suapbot.conf  wsgi.py
app/: app.py
app/blueprints/auth/: views.py
app/blueprints/webhook_bot/: views.py
app/bot/: bot.py  tasks.py
app/bot/handlers/: base.py  common.py  help.py  helpers.py  login.py  middleware.py  periods.py  reportcard.py  schedule.py  virtualclasses.py
app/bot/suap_wrapper/: main.py  schemas.py
app/extensions/: admin.py  bot.py  celery.py  cli.py  database.py  migrate.py
app/models/: forms.py  tables.py
app/static/css/: form.css  reset.css  style.css
app/templates/: base.html
app/templates/auth/: login.html
app/templates/bot/: class schedule.jinja  help.jinja  periods.jinja  reportcard.jinja  virtual_class_materials.jinja  virtual_class_ministred.jinja  virtual_class_students.jinja  virtual_period_classes.jinja
